kubernetes/manifests/mutate-security-context.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-security-context
  annotations:  
    policies.kyverno.io/title: Mutate security context
    policies.kyverno.io/description: This policy ensures that all pods have a security context.
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: Medium
    policies.kyverno.io/subject: Pod
spec:
  background: true
  rules:
  - name: mutate-security-context
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kyverno
          - falco
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            kyverno.io/mutated: "true" # Inform the user that this resource was generated by Kyverno
        spec:
          securityContext:
            runAsNonRoot: true
            runAsUser: 1500
